<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context=".LoginActivity">

    <EditText
        android:id="@+id/login_username_edit_text"
        android:hint="@string/username"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <EditText
        android:layout_below="@id/login_username_edit_text"
        android:inputType="textPassword"
        android:layout_marginTop="@dimen/activity_horizontal_margin"
        android:id="@+id/login_password_edit_text"
        android:hint="@string/password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <Button
        android:id="@+id/login_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:background="@drawable/button_click"
        android:textColor="@color/clouds"
        android:layout_marginTop="@dimen/activity_horizontal_margin"
        android:layout_below="@id/login_password_edit_text"
        android:text="@string/login" />

    <ImageView
        android:layout_below="@id/login_button"
        android:id="@+id/logoImageView"
        android:layout_width="wrap_content"
        android:layout_height="250dp"
        android:layout_marginTop="@dimen/activity_horizontal_margin"
        android:layout_centerHorizontal="true"
        android:contentDescription="@string/app_name"
        android:src="@drawable/dpsnmun_logo" />

    <Button
        android:id="@+id/advice_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_alignParentBottom="true"
        android:background="@android:color/transparent"
        android:text="@string/advice" />
</RelativeLayout>